fix(overflow x): fix scrollbar in x direction

--- a/src/index.css
+++ b/src/index.css
@@ -88,9 +88,8 @@ input:focus-visible {
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .logo {
